2011-04-04 Roman
- !!:DAQ.SNMP: SNMP v3 support is added.


2011-03-31 Roman
- !!:SYS: To user API is added function SYS.Security.access() for control access to some resources by OpenSCADA users.


2011-03-30 Roman
- DB: Into user API function "SQLreq()" is added set cell value to object property by collumn name, to row Array > 0.
- SYS: To user API object TArray is set return null value for wrong indexes.
- !!:DAQ.JavaLikeCalc: Special symbols write by octal "\041" and hex "\x21" digits is added.


2011-03-29 Maxim
- FIX:UI.Vision: shapeSave function is fixed to store elements in the own container for the primitive ElFigure.
- FIX:Protocol.HTTP: Some fixes to the English language is made.


2011-03-29 Roman
- FIX:Function: Set Object to no object's function parameter is fixed for prevent memory leak by no object destroy.
- FIX:UI.Vision: Bit flags processing is some fixed.
- !!:DAQ.SNMP: Some messages update and translate. Version 0.6.0 is released.


2011-03-28 Roman
- SYS: Using "pkg-config" for global include flag detect for libpcre is added.
- SYS: To user's API object TCntrNode is added function nodePrev() for access parent node access.
- SYS: To user's API object XMLNodeObj is added function parent() for access parent node access.
- !!!:TFunction, DAQ.JavaLikeCalc: User's API object TFuncArgObj is added for get a function arguments.
- DAQ.JavaLikeCalc: The special attribute "this" is added for user access the object of the controller allow.
- DAQ.LogicLev: The special attribute "this" is added for user access the object of the controller's parameter allow.
- FIX:DAQ.OPC_UA: Archive's value period set is fixed on an attribute to archive enabling.
- !!:DAQ.SNMP: All value types support is added. Write values support is added. Errors processing is improved.
    Addon SNMP connection configuration parameters is added.


2011-03-24 Roman
- !!!!:SYS, DAQ.JavaLikeCalc: The User's system API regular expression object TRegExp, based on PCRE, support is added.