@@ -1975,9 +1975,11 @@ void LineEditProp::callDlg( )
             clr.setAlpha( atoi(value().toStdString().substr(found+1).c_str()) );
         }
         else clr = QColor(value());
-	clr = QColorDialog::getColor(clr,this);
-	if( clr.isValid() ) setValue(clr.name());
-	setFocus();
+        QColorDialog clr_dlg( clr, this );
+        clr_dlg.setOption(QColorDialog::ShowAlphaChannel);
+        if( clr_dlg.exec() && clr_dlg.selectedColor().isValid() )
+            setValue( clr_dlg.selectedColor().name() + "-" + QString(TSYS::int2str( clr_dlg.selectedColor().alpha() ).c_str()) );
+        setFocus();
     }
     QApplication::postEvent(this,new QKeyEvent(QEvent::KeyPress,Qt::Key_Return,Qt::NoModifier));
 }
