@@ -1,3 +1,7 @@
+2011-04-04 Maxim
+- UI.Vision: Transparency of the color support is added to the color dialog.
+
+
 2011-04-04 Roman
 - !!:DAQ.SNMP: SNMP v3 support is added.
 
